Monitoring/Grafana-server-ingress.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: grafana
  namespace: default
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/actuator/prometheus"
    spec:
      containers:
        - name: springtest
          image: "nikita9355/springtest:latest"
          ports:
            - containerPort: 8080

---
kind: Service
apiVersion: v1
metadata:
  name: springtest-service
  labels:
    env  : prod
    owner: BykovNV
spec:
  selector:
    app: springtest
  ports:
    - name      : app-listener
      nodePort  : 30030
      protocol  : TCP
      port      : 80
      targetPort: 8080 # Port on Pod
  type: NodePort

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts
spec:
  rules:
    - host: www.spring-testsber.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: springtest-service
                port:
                  number: 80
